# NS-Monuments

./: App.xaml  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml.cs  PrvaApp.csproj  PrvaApp.slnx  README.md
Data/Model/: Monument.cs
ML/: ImagePreprocessor.cs
mobile_app/: .gitattributes  .gitignore  PrvaApp.csproj
mobile_app/Data/: AppInitService.cs  DatabaseService.cs
mobile_app/ML/: EmbeddingService.cs
mobile_app/Mobile/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  CreditsStrana.xaml  CreditsStrana.xaml.cs  Info.xaml  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Rezultat.xaml  Rezultat.xaml.cs
mobile_app/Resources/Raw/: database.db  test_database.db
mobile_app/Resources/Styles/: Colors.xaml
mobile_app/Services/: RecognitionServices.cs
server/: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  run_server.py  schemas.py
